--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
-body {
-    background-color: red;
+
+#HomePage{
+    background-image: url("../img/dessert-3804693_1920.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+
 }
